2006-06-13  Guillaume Smet <guillaume-pg@smet.org>

	* fixed a problem with older versions of PHP

2006-06-11  Guillaume Smet <guillaume-pg@smet.org>

	* fixed a problem with NOTICE/STATEMENT couple on DDL
	* improved the -report option analysis
	* NOTICEs for a query are now displayed
	* improved normalized queries formatting

2006-05-27  Guillaume Smet <guillaume-pg@smet.org>

	* fixed a bug when there is no query in the log file

2006-05-21  Guillaume Smet <guillaume-pg@smet.org>

	* released 0.6

2006-05-20  Guillaume Smet <guillaume-pg@smet.org>

	* normalized error code cleanup

2006-05-19  Guillaume Smet <guillaume-pg@smet.org>

	* added a test to check the freetype support
	* reported changes made on PHP4 version of Artichow to the PHP5 version
	* added -memorylimit option

2006-04-21  Guillaume Smet <guillaume-pg@smet.org>

	* fixed a stupid notice in tooltips thanks to Larry Rosenman
	* added an option to set syslog ident (postgres by default) following
	Larry Rosenman's suggestion

2006-04-18  Guillaume Smet <guillaume-pg@smet.org>

	* query count peaks don't depend anymore on the order of the log file
	(useful when you concatenate 2 log files from 2 different servers)

2006-04-17  Guillaume Smet <guillaume-pg@smet.org>

	* added tooltip with hourly statistics on errors too

2006-04-06  Guillaume Smet <guillaume-pg@smet.org>

	* only generate graphs if we have enough data to do it
	* added -title option to define the title of the report

2006-04-05  Guillaume Smet <guillaume-pg@smet.org>

	* added the framework for unit testing on real log files
	* first test case

2006-04-04  Guillaume Smet <guillaume-pg@smet.org>

	* added a tooltip with hourly statistics on normalized queries

2006-04-03  Guillaume Smet <guillaume-pg@smet.org>

	* added a tooltip with detailed information on queries and errors
	* only display identified statistics if different from overall

2006-04-02  Guillaume Smet <guillaume-pg@smet.org>
